# ServerCrud

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
.github/: build-ServerCrud.yml
.github/workflows/: build-server-crud.yml
cmake/: config.hpp.in
include/: CMakeLists.txt
include/ServerCrud/: ArgParser.hpp  ServerCrud.h  ServerCrud.hpp  TerminationHandler.hpp  WindowsConsole.hpp  config.hpp
include/ServerCrud/http/: Connection.hpp  Header.hpp  IRequestHandler.hpp  Request.hpp  RequestParser.hpp  Response.hpp  Status.hpp
include/ServerCrud/http/mime_types/: JsonRequestHandler.hpp  JsonResponse.hpp
src/: ArgParser.cpp  CMakeLists.txt  ServerCrud.cpp  main.cpp
src/http/: Connection.cpp  RequestParser.cpp  Response.cpp  Status.cpp
src/http/mime_types/: JsonRequestHandler.cpp  JsonResponse.cpp
